bonus/confs/gitlab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  containers:
  - name: gitlab
    image: gitlab/gitlab-ce:latest
    securityContext:
      runAsUser: 0
    ports:
    - containerPort: 80
    - containerPort: 443
    - containerPort: 22
